--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,16 +18,21 @@
 
     <!-- Pantalla de bienvenida -->
     <string name="home_txt_title">Pantalla de bienvenida</string>
-    <string name="home_txt_inmovable">Inmuebles</string>
-    <string name="home_txt_logout">Cerrar sesión</string>
+    <string name="home_tlb_menu">Menú principal</string>
+    <string name="home_menu_inmovable">Inmuebles</string>
+    <string name="home_menu_options">Opciones de usuario</string>
+    <string name="home_menu_profile">Perfil de usuario</string>
+    <string name="home_menu_logout">Cerrar sesión</string>
 
     <!-- Creación de inmuebles -->
     <string name="inm_create_tab_main">Principal</string>
     <string name="inm_create_tab_location">Ubicación</string>
     <string name="inm_create_tab_photos">Fotos</string>
+
     <!-- Creación de inmuebles: Datos principales -->
     <string name="inm_create_main_lbl_name">Nombre del inmueble</string>
     <string name="inm_create_main_lbl_price">Precio máximo</string>
+
     <!-- Creación de inmuebles: Datos de ubicación -->
     <string name="inm_create_loc_lbl_department">Departamento</string>
     <string name="inm_create_loc_lbl_province">Provincia</string>
@@ -39,6 +44,9 @@
     <string name="api_dlg_error_msg_http">Ocurrió un error desconocido.\nCódigo de error: HTTP %d</string>
     <string name="api_dlg_error_msg_rest">El servicio otorgó un error desconocido.\nCódigo de error: %d</string>
     <string name="api_dlg_error_msg_empty">El servicio no otorgó respuesta.</string>
+
+    <!-- Toolbars y textos de -->
+    <string name="toolbar_txt_search">Buscar</string>
 
     <!-- TODO: Quitar esto -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
