--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,12 @@
     <string name="inm_create_tab_main">Principal</string>
     <string name="inm_create_tab_location">Ubicación</string>
     <string name="inm_create_tab_photos">Fotos</string>
+    <string name="inm_create_msg_name_empty">Ingrese el nombre del inmueble.</string>
+    <string name="inm_create_msg_price_invalid">El precio máximo del inmueble debe ser positivo.</string>
+    <string name="inm_create_msg_department_empty">Ingrese el departamento del inmueble.</string>
+    <string name="inm_create_msg_province_empty">Ingrese la dirección del inmueble.</string>
+    <string name="inm_create_msg_district_empty">Ingrese el distrito del inmueble.</string>
+    <string name="inm_create_msg_location_empty">Ingrese la dirección del inmueble.</string>
     <!-- Creación de inmuebles: Datos principales -->
     <string name="inm_create_main_lbl_name">Nombre del inmueble</string>
     <string name="inm_create_main_lbl_price">Precio máximo</string>
@@ -45,7 +51,8 @@
     <string name="inm_create_loc_lbl_reference">Referencia(s)</string>
     <string name="inm_create_loc_lbl_latitude">Latitud</string>
     <string name="inm_create_loc_lbl_longitude">Longitud</string>
-    <string name="inm_create_loc_btn_geolocation">Activar geolocalización</string>
+    <string name="inm_create_loc_btn_activate_gps">Activar GPS</string>
+    <string name="inm_create_loc_btn_deactivate_gps">Desactivar GPS</string>
     <!-- TODO: Creación de inmuebles: Fotos -->
 
     <!-- Mensajes de conexión al API REST -->
@@ -59,7 +66,7 @@
     <string name="gps_msg_permissions">No se aceptaron los permisos necesarios para poder registrar
         su ubicación en tiempo real.</string>
 
-    <!-- Barras superiores -->
+    <!-- Botones de la barra superior (Toolbar) -->
     <string name="toolbar_txt_search">Buscar</string>
     <string name="toolbar_txt_save">Guardar</string>
 
