--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,11 @@
     <string name="inm_create_msg_location_empty">Ingrese la dirección del inmueble.</string>
     <string name="inm_create_msg_failure">Hubo un error desconocido al intentar guardar el inmueble.
         Por favor inténtelo nuevamente.</string>
-    <string name="inm_create_msg_success">Inmueble guardado exitosamente.</string>
+    <string name="inm_create_msg_database">No se pudo guardar el inmueble en la base de datos.
+        Por favor inténtelo nuevamente.</string>
+    <string name="inm_create_msg_no_photo">Inmueble guardado en base de datos, sin embargo no se
+        pudo guardar la foto principal del inmueble.</string>
+    <string name="inm_create_msg_saved">Inmueble guardado en base de datos.</string>
 
     <!-- Creación de inmuebles: Datos principales -->
     <string name="inm_create_main_lbl_name">Nombre del inmueble</string>
@@ -79,16 +83,15 @@
     <string name="api_dlg_error_msg_rest">El servicio otorgó un error desconocido.\nCódigo de error: %d</string>
     <string name="api_dlg_error_msg_empty">El servicio no otorgó respuesta.</string>
 
-    <!-- Mensajes de servicio de geolocalización (GPS) -->
-    <string name="gps_msg_unavailable">Este dispositivo no cuenta con un servicio de geolocalización.</string>
-    <string name="gps_msg_inactive">Por favor active el GPS en su dispositivo.</string>
-    <string name="gps_msg_permissions">No se aceptaron los permisos necesarios para poder registrar
+    <!-- Mensajes relacionados a funcionalidades del sistema Android -->
+    <string name="feature_gps_msg_unavailable">Este dispositivo no cuenta con un servicio de geolocalización.</string>
+    <string name="feature_gps_msg_denied">No se aceptaron los permisos necesarios para poder registrar
         su ubicación en tiempo real.</string>
-
-    <!-- Mensajes de conexión a la cámara del dispositivo móvil -->
-    <string name="camera_msg_unavailable">Este dispositivo no cuenta con cámara.</string>
-    <string name="camera_msg_permissions">No se aceptaron los permisos necesarios para poder tomar
+    <string name="feature_camera_msg_unavailable">Este dispositivo no cuenta con cámara.</string>
+    <string name="feature_camera_msg_denied">No se aceptaron los permisos necesarios para poder tomar
         una foto en su dispositivo.</string>
+    <string name="feature_storage_msg_denied">No se aceptaron los permisos necesarios para poder
+        guardar archivos (como fotos) en su dispositivo. ¿Desea guardar de todas formas?</string>
 
     <!-- Botones de la barra superior (Toolbar) -->
     <string name="toolbar_txt_search">Buscar</string>
